# proyecto104

./: CMakeLists.txt  README.md
other/: cursos.txt  prueba.cc  usuarios.txt
src/: CMakeLists.txt
src/administrador_aplicacion/: CMakeLists.txt  administrador_aplicacion.cc  administrador_aplicacion.h
src/administrador_cursos/: CMakeLists.txt  administrador_cursos.cc  administrador_cursos.h
src/administrador_recursos/: CMakeLists.txt  administrador_recursos.cc  administrador_recursos.h
src/app/: CMakeLists.txt  app.cc  app.h  ejemplo_lista_cursos.txt  ejemplo_lista_usuario.txt  main.cc
src/aulas/: CMakeLists.txt  aulas.cc  aulas.h
src/camaras/: CMakeLists.txt  camaras.cc  camaras.h
src/curso/: CMakeLists.txt  curso.cc  curso.h  estadisticas.cc  estadisticas.h  usuario.cc  usuario.h
src/estadisticas/: CMakeLists.txt  estadisticas.cc  estadisticas.h
src/inicio_sesion/: CMakeLists.txt  inicio_sesion.cc  inicio_sesion.h
src/lista_cursos/: CMakeLists.txt  lista_cursos.cc  lista_cursos.h
src/lista_usuarios/: CMakeLists.txt  lista_usuarios.cc  lista_usuarios.h
src/proyectores/: CMakeLists.txt  proyectores.h
src/recurso/: CMakeLists.txt  recurso.cc  recurso.h
src/usuario/: CMakeLists.txt  usuario.cc  usuario.h
