add_subdirectory(usuario)
add_subdirectory(curso)
add_subdirectory(lista_cursos)
add_subdirectory(estadisticas)
add_subdirectory(recurso)
add_subdirectory(app)
add_subdirectory(inicio_sesion)
add_subdirectory(lista_usuarios)
add_subdirectory(administrador_aplicacion)
add_subdirectory(administrador_cursos)
add_subdirectory(administrador_recursos)
